--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "next": "16.1.1",
+    "query-string": "^9.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "uuid": "^13.0.0",
